//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

message FilePrice {
  string          Name            =1;  //真实文件名
  bytes           Hash            =2;  //hash值
  uint64          Price           =3;  //价格
  int64           FileSize        =4;  //文件大小
  int64           Time            =5;  //文件创建时间
}

